--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,23 +1,37 @@
 html {
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
 }
 
 body {
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
+  font-family: Arial;
+}
+
+h3 {
+  margin: 0;
+  padding: 10px;
 }
 
 form {
-  margin: 0 auto;
+  margin: 0;
+  padding: 0
 }
 
 #submit {
   padding: 5px 10px;
   color: white;
   background-color: #0011D0;
+  border: none;
+  margin: 10px;
+  font-size: 16px;
+  border-radius: 4px;
+  width: 95%;
 }
 
 #submit:hover {
@@ -28,12 +42,14 @@ form {
 .inputs {
   background-color: #81f5ac;
   width: 100%;
+  overflow: auto;
 }
+
 label {
   display: inline-block;
   float: left;
   clear: left;
-  width: 80px;
+  width: 120px;
   text-align: right;
   margin: 5px;
 }
@@ -41,6 +57,11 @@ label {
 input {
   display: inline-block;
   float: left;
+}
+
+.autocorrect {
+  background-color: #D0FBE0;
+  text-align: center;
 }
 
 
@@ -65,7 +86,19 @@ input {
 .right-canvas {
   background-color: #000000;
   height: 100%;
-  width: 67%;
+  width: 70%;
   float: left;
   padding: 0px;
+}
+
+
+/* Canvas CSS */
+
+#map {
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  border: 1px solid #FF00FF;
+  width: 100%;
+  height: 100%;
 }
