Updated Main, main.js, draw.js to get the first working version of the Gui drawing

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -97,8 +97,7 @@ input {
 #map {
   padding: 0;
   margin: 0;
-  position: absolute;
-  border: 1px solid #FF00FF;
+  position: static;
   width: 100%;
   height: 100%;
 }
